--- a/vtt-audio-streamer/package.json
+++ b/vtt-audio-streamer/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vuetify": "^3.11.6"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.3"
   }
 }
